# pycollatz

./: CMakeLists.txt  README.md  collatz.cpp  collatz.h  main.cpp  main.py  onlypython.py  pycollatz.cpp
